load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library",)
load("@rules_jvm_external//:defs.bzl", "java_export")

scala_library(
    name = "src",
    deps = ["//src/main/scala/casehub/client"],
)

java_export(
    name = "client",
    maven_coordinates = "io.github.casehubdk:client_2_13:1.0.0",
    runtime_deps = [":src"],
    srcs = glob(["**/*.scala"]),
    pom_template = "//pom:pom.tpl",
)

