load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")
load("@scala_things//:flags/flags.bzl", "flags")

scala_library(
    name = "client",
    srcs = glob(["*.scala"]),
    scalacopts = flags,
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:org_typelevel_cats_effect_2_13",
    ]
)
